; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/txt2nls/extr_txt.c_txt_get_header.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/devutils/txt2nls/extr_txt.c_txt_get_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8*, i8*, i8*, i8*, i8*, i8* }

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.1 = private unnamed_addr constant [26 x i8] c"Unable to read TXT file.\0A\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"CODEPAGE\00", align 1
@.str.3 = private unnamed_addr constant [31 x i8] c"Wrong codepage: %u (line: %u)\0A\00", align 1
@.str.4 = private unnamed_addr constant [21 x i8] c"CODEPAGE not found.\0A\00", align 1
@.str.5 = private unnamed_addr constant [7 x i8] c"CPINFO\00", align 1
@.str.6 = private unnamed_addr constant [37 x i8] c"Wrong character size: %u (line: %u)\0A\00", align 1
@.str.7 = private unnamed_addr constant [19 x i8] c"CPINFO not found.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @txt_get_header(i8* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [256 x i8], align 16
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  %13 = load i8*, i8** %4, align 8
  %14 = call i32* @fopen(i8* %13, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %19, label %17

17:                                               ; preds = %2
  %18 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %161

19:                                               ; preds = %2
  store i32 0, i32* %11, align 4
  br label %20

20:                                               ; preds = %58, %19
  %21 = getelementptr inbounds [256 x i8], [256 x i8]* %8, i64 0, i64 0
  %22 = load i32*, i32** %6, align 8
  %23 = call i64 @fgets(i8* %21, i32 256, i32* %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %59

25:                                               ; preds = %20
  %26 = load i32, i32* %9, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %9, align 4
  %28 = getelementptr inbounds [256 x i8], [256 x i8]* %8, i64 0, i64 0
  %29 = call i8* @strstr(i8* %28, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0))
  store i8* %29, i8** %7, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = icmp ne i8* %30, null
  br i1 %31, label %32, label %58

32:                                               ; preds = %25
  %33 = load i8*, i8** %7, align 8
  %34 = getelementptr inbounds i8, i8* %33, i64 8
  store i8* %34, i8** %7, align 8
  br label %35

35:                                               ; preds = %40, %32
  %36 = load i8*, i8** %7, align 8
  %37 = load i8, i8* %36, align 1
  %38 = call i64 @isspace(i8 signext %37)
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %35
  %41 = load i8*, i8** %7, align 8
  %42 = getelementptr inbounds i8, i8* %41, i32 1
  store i8* %42, i8** %7, align 8
  br label %35

43:                                               ; preds = %35
  %44 = load i8*, i8** %7, align 8
  %45 = call i32 @strtoul(i8* %44, i8** %7, i32 10)
  store i32 %45, i32* %12, align 4
  %46 = load i32, i32* %12, align 4
  %47 = icmp sgt i32 %46, 65535
  br i1 %47, label %48, label %52

48:                                               ; preds = %43
  %49 = load i32, i32* %12, align 4
  %50 = load i32, i32* %9, align 4
  %51 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.3, i64 0, i64 0), i32 %49, i32 %50)
  br label %157

52:                                               ; preds = %43
  %53 = load i32, i32* %12, align 4
  %54 = sext i32 %53 to i64
  %55 = inttoptr i64 %54 to i8*
  %56 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %57 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %56, i32 0, i32 6
  store i8* %55, i8** %57, align 8
  store i32 1, i32* %11, align 4
  br label %59

58:                                               ; preds = %25
  br label %20

59:                                               ; preds = %52, %20
  %60 = load i32, i32* %11, align 4
  %61 = icmp ne i32 %60, 0
  br i1 %61, label %64, label %62

62:                                               ; preds = %59
  %63 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0))
  br label %157

64:                                               ; preds = %59
  store i32 0, i32* %11, align 4
  br label %65

65:                                               ; preds = %148, %64
  %66 = getelementptr inbounds [256 x i8], [256 x i8]* %8, i64 0, i64 0
  %67 = load i32*, i32** %6, align 8
  %68 = call i64 @fgets(i8* %66, i32 256, i32* %67)
  %69 = icmp ne i64 %68, 0
  br i1 %69, label %70, label %149

70:                                               ; preds = %65
  %71 = load i32, i32* %9, align 4
  %72 = add nsw i32 %71, 1
  store i32 %72, i32* %9, align 4
  %73 = getelementptr inbounds [256 x i8], [256 x i8]* %8, i64 0, i64 0
  %74 = call i8* @strstr(i8* %73, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0))
  store i8* %74, i8** %7, align 8
  %75 = load i8*, i8** %7, align 8
  %76 = icmp ne i8* %75, null
  br i1 %76, label %77, label %148

77:                                               ; preds = %70
  %78 = load i8*, i8** %7, align 8
  %79 = getelementptr inbounds i8, i8* %78, i64 6
  store i8* %79, i8** %7, align 8
  br label %80

80:                                               ; preds = %85, %77
  %81 = load i8*, i8** %7, align 8
  %82 = load i8, i8* %81, align 1
  %83 = call i64 @isspace(i8 signext %82)
  %84 = icmp ne i64 %83, 0
  br i1 %84, label %85, label %88

85:                                               ; preds = %80
  %86 = load i8*, i8** %7, align 8
  %87 = getelementptr inbounds i8, i8* %86, i32 1
  store i8* %87, i8** %7, align 8
  br label %80

88:                                               ; preds = %80
  %89 = load i8*, i8** %7, align 8
  %90 = call i32 @strtoul(i8* %89, i8** %7, i32 10)
  store i32 %90, i32* %12, align 4
  %91 = load i32, i32* %12, align 4
  %92 = icmp ne i32 %91, 1
  br i1 %92, label %93, label %100

93:                                               ; preds = %88
  %94 = load i32, i32* %12, align 4
  %95 = icmp ne i32 %94, 2
  br i1 %95, label %96, label %100

96:                                               ; preds = %93
  %97 = load i32, i32* %12, align 4
  %98 = load i32, i32* %9, align 4
  %99 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str.6, i64 0, i64 0), i32 %97, i32 %98)
  br label %157

100:                                              ; preds = %93, %88
  %101 = load i32, i32* %12, align 4
  %102 = sext i32 %101 to i64
  %103 = inttoptr i64 %102 to i8*
  %104 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %105 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %104, i32 0, i32 5
  store i8* %103, i8** %105, align 8
  br label %106

106:                                              ; preds = %111, %100
  %107 = load i8*, i8** %7, align 8
  %108 = load i8, i8* %107, align 1
  %109 = call i64 @isspace(i8 signext %108)
  %110 = icmp ne i64 %109, 0
  br i1 %110, label %111, label %114

111:                                              ; preds = %106
  %112 = load i8*, i8** %7, align 8
  %113 = getelementptr inbounds i8, i8* %112, i32 1
  store i8* %113, i8** %7, align 8
  br label %106

114:                                              ; preds = %106
  %115 = load i8*, i8** %7, align 8
  %116 = call i32 @strtoul(i8* %115, i8** %7, i32 16)
  store i32 %116, i32* %12, align 4
  %117 = load i32, i32* %12, align 4
  %118 = sext i32 %117 to i64
  %119 = inttoptr i64 %118 to i8*
  %120 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %121 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %120, i32 0, i32 4
  store i8* %119, i8** %121, align 8
  %122 = load i32, i32* %12, align 4
  %123 = sext i32 %122 to i64
  %124 = inttoptr i64 %123 to i8*
  %125 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %126 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %125, i32 0, i32 3
  store i8* %124, i8** %126, align 8
  br label %127

127:                                              ; preds = %132, %114
  %128 = load i8*, i8** %7, align 8
  %129 = load i8, i8* %128, align 1
  %130 = call i64 @isspace(i8 signext %129)
  %131 = icmp ne i64 %130, 0
  br i1 %131, label %132, label %135

132:                                              ; preds = %127
  %133 = load i8*, i8** %7, align 8
  %134 = getelementptr inbounds i8, i8* %133, i32 1
  store i8* %134, i8** %7, align 8
  br label %127

135:                                              ; preds = %127
  %136 = load i8*, i8** %7, align 8
  %137 = call i32 @strtoul(i8* %136, i8** %7, i32 16)
  store i32 %137, i32* %12, align 4
  %138 = load i32, i32* %12, align 4
  %139 = sext i32 %138 to i64
  %140 = inttoptr i64 %139 to i8*
  %141 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %142 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %141, i32 0, i32 2
  store i8* %140, i8** %142, align 8
  %143 = load i32, i32* %12, align 4
  %144 = sext i32 %143 to i64
  %145 = inttoptr i64 %144 to i8*
  %146 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %147 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %146, i32 0, i32 1
  store i8* %145, i8** %147, align 8
  store i32 1, i32* %11, align 4
  br label %149

148:                                              ; preds = %70
  br label %65

149:                                              ; preds = %135, %65
  %150 = load i32, i32* %11, align 4
  %151 = icmp ne i32 %150, 0
  br i1 %151, label %154, label %152

152:                                              ; preds = %149
  %153 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.7, i64 0, i64 0))
  br label %157

154:                                              ; preds = %149
  %155 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %156 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %155, i32 0, i32 0
  store i32 7, i32* %156, align 8
  store i32 1, i32* %10, align 4
  br label %157

157:                                              ; preds = %154, %152, %96, %62, %48
  %158 = load i32*, i32** %6, align 8
  %159 = call i32 @fclose(i32* %158)
  %160 = load i32, i32* %10, align 4
  store i32 %160, i32* %3, align 4
  br label %161

161:                                              ; preds = %157, %17
  %162 = load i32, i32* %3, align 4
  ret i32 %162
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @fgets(i8*, i32, i32*) #1

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i64 @isspace(i8 signext) #1

declare dso_local i32 @strtoul(i8*, i8**, i32) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
